v 2.0.a.11 - 3 May 2015
- switched to google hosted version of jqueryui; removed local jqueryui directory
- confirm on delete file

v 2.0.a.10 - 24 October 2014
- exact match only on integer-type field (so "1" doesn't find "14")

v 2.0.a.09 - 23 October 2014

- removed Display Settings button from nav when no default table selected
- corrected the link to upload format instructions from upload.php

v 2.0.a.08 - 28 August 2014
- changed css in controller to elimate the blue button border that IE added by default
- fixed bug that had each column displaying twice in csv.php
- nav.php never displays all tools in header on index/controller page, only on other pages (avoids confusion about which table is active default)

v 2.0.a.07 - 28 August 2014
- index.php used to be a copy of controller.php (why?). Now index points to controller so only one needs to be updated. The short lived 2.0.a.06 release had non-matching index and controllers, revealing this long-standing error. Fixed now.
- tidied up csv.php -- added attribution for where the code came from, removed an earlier version of the coded that had been commented out

v 2.0.a.06 - 28 August 2014
- added the long-awaited CSV download option

v 2.0.a.05 - 25 August 2014
- update Display Settings defaults to reflect item-based database fields
- fixed bug that made some Display Settings defaults unchangeable
- added $debug variable to config-sample.php; changing to 'true' displays the $_REQUEST and $_SESSION variables in nav.php. Could be later expanded to display other debugging information.

v 2.0.a.04 - 11 August 2014
- corrected display of version number in footer

v. 2.0.a.03 - 12 July 2013
- switched from php short tags (<?) to fully qualified php tags (<?php)

v. 2.0.a.02 - 15 July 2013
- moved session_start() command to the beginning of each file -- should make some servers happier.

v. 2.0.a.01 - 12 July 2013