@@ -1,5 +1,5 @@
 <?php 
-error_reporting(E_WARN);
+error_reporting('E_WARN');
 ini_set("display_errors", 1);
 
 if (! include("config.php")) {
